# deep_learning_theory

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/deep_learning_theory/: __init__.py  callbacks.py  datamodules.py  lightning_modules.py  losses.py  main.py  models.py  utils.py
src/deep_learning_theory/conf/: base.yaml  hydra.yaml  trainer.yaml
src/deep_learning_theory/conf/backbone/: fc.yaml  resnet56.yaml  wide_resnet_28_10.yaml
src/deep_learning_theory/conf/datamodule/: cifar10.yaml  cifar100.yaml  mnist.yaml
src/deep_learning_theory/conf/experiment/: catapult_fc_mnist512_sgd.yaml  catapult_wide_resnet_28_10_cifar10_sgd.yaml  resnet56_cifar10_sgd_1cycle.yaml  resnet56_cifar10_sgd_multi_step.yaml
src/deep_learning_theory/conf/loss/: catapult_mse.yaml
src/deep_learning_theory/conf/lr_scheduler/: 1cycle.yaml  constant.yaml  multi_step.yaml
src/deep_learning_theory/conf/optimizer/: sgd.yaml
src/deep_learning_theory/conf/weight_init_fn/: lecun_normal.yaml  normal.yaml
