[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "deep_learning_theory"
dynamic = ["dependencies"]
description = "Deep Learning Theory"
authors = [{name = "Dariusz Kajtoch", email = "dkajtoch@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "mypy==1.15.0",
    "ruff==0.9.10",
    "black==25.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deep_learning_theory*"]

[tool.setuptools.package-data]
"deep_learning_theory" = [
    "conf/*.yaml",
    "conf/*.yml",
    "conf/**/*.yaml",
    "conf/**/*.yml",
]

[tool.ruff]
line-length = 88
indent-width = 4
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D100", "D104", "D107", "D101", "D102", "D103", "RUF001", "N812"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["deep_learning_theory"]

# `D104` (missing docstring in public package)
# `E402` (import violations)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402"]
"**/tests/*" = ["E402", "D"]

# Ruff does not autoformat line-too-long errors.
[tool.black]
line-length = 88
target-version = ['py310']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
install_types = true
non_interactive = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
